why tf this shit arent working

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+GameDefaultMap=/Game/Levels/dev_lvl.dev_lvl
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/Gamemodes/BP_GM_Explore.BP_GM_Explore_C
 GlobalDefaultServerGameMode=None
